--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
   "private": true,
   "scripts": {
-    "dev": "vite --port 3333 --open",
+    "dev": "vite --port 3000",
     "build": "cross-env NODE_ENV=production vite-ssg build --script async"
   },
   "dependencies": {
     "@vueuse/core": "^4.0.5",
     "nprogress": "^0.2.0",
     "vue": "^3.0.5",
-    "vue-i18n": "9.0.0-rc.1",
     "vue-router": "^4.0.2"
   },
   "devDependencies": {
     "@antfu/eslint-config-vue": "^0.4.3",
     "@iconify/json": "^1.1.284",
-    "@intlify/vite-plugin-vue-i18n": "^1.0.0-beta.12",
     "@tailwindcss/typography": "^0.3.1",
     "@types/nprogress": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
