--- a/package.json
+++ b/package.json
@@ -2,17 +2,22 @@
   "private": true,
   "scripts": {
     "dev": "vite --port 3000",
+    "dev:debug": "vite --port 3000 --debug",
     "build": "cross-env NODE_ENV=production vite-ssg build --script async"
   },
   "dependencies": {
+    "@vee-validate/i18n": "^4.0.2",
+    "@vee-validate/rules": "^4.0.4",
     "@vueuse/core": "^4.0.5",
     "nprogress": "^0.2.0",
+    "vee-validate": "^4.1.6",
     "vue": "^3.0.5",
     "vue-router": "^4.0.2"
   },
   "devDependencies": {
     "@antfu/eslint-config-vue": "^0.4.3",
     "@iconify/json": "^1.1.284",
+    "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/typography": "^0.3.1",
     "@types/nprogress": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
