--- a/package.json
+++ b/package.json
@@ -38,10 +38,9 @@
     "vite-plugin-components": "^0.6.6",
     "vite-plugin-icons": "^0.2.1",
     "vite-plugin-md": "^0.2.1",
+    "vite-plugin-pages": "^0.1.4",
     "vite-plugin-pwa": "^0.3.6",
-    "vite-plugin-voie": "^0.7.3",
-    "vite-ssg": "^0.3.1",
-    "voie-pages": "^0.4.0"
+    "vite-ssg": "^0.3.1"
   },
   "eslintConfig": {
     "extends": "@antfu/eslint-config-vue",
