--- a/package.json
+++ b/package.json
@@ -8,39 +8,40 @@
   "dependencies": {
     "@vee-validate/i18n": "^4.0.2",
     "@vee-validate/rules": "^4.0.5",
-    "@vueuse/core": "^4.0.5",
+    "@vueuse/core": "^4.0.8",
     "axios": "^0.21.1",
     "nprogress": "^0.2.0",
-    "vee-validate": "^4.1.7",
+    "vee-validate": "^4.1.10",
     "vue": "^3.0.5",
+    "vue-chemistry": "^0.1.4",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
     "@antfu/eslint-config-vue": "^0.4.3",
-    "@iconify/json": "^1.1.285",
+    "@iconify/json": "^1.1.288",
     "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/typography": "^0.3.1",
     "@types/nprogress": "^0.2.0",
-    "@typescript-eslint/eslint-plugin": "^4.13.0",
-    "@vitejs/plugin-vue": "^1.0.5",
+    "@typescript-eslint/eslint-plugin": "^4.14.0",
+    "@vitejs/plugin-vue": "^1.0.6",
     "@vue/compiler-sfc": "^3.0.5",
     "@vue/server-renderer": "^3.0.5",
     "@vuedx/typescript-plugin-vue": "^0.4.1",
     "autoprefixer": "^10.2.1",
     "cross-env": "^7.0.3",
-    "eslint": "^7.17.0",
+    "eslint": "^7.18.0",
     "markdown-it-prism": "^2.1.4",
-    "pnpm": "^5.15.0",
+    "pnpm": "^5.15.1",
     "postcss": "^8.2.4",
     "postcss-nested": "^5.0.3",
     "tailwindcss": "^2.0.2",
     "typescript": "^4.1.3",
-    "vite": "^2.0.0-beta.23",
+    "vite": "^2.0.0-beta.31",
     "vite-plugin-components": "^0.6.6",
     "vite-plugin-icons": "^0.2.1",
     "vite-plugin-md": "^0.2.1",
     "vite-plugin-pages": "^0.1.4",
-    "vite-plugin-pwa": "^0.3.6",
+    "vite-plugin-pwa": "^0.3.8",
     "vite-ssg": "^0.3.1"
   },
   "eslintConfig": {
